<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="130dp"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:orientation="horizontal">

    <ImageView
            android:id="@+id/ivIcon"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

    <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:layout_width="200dp"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"/>


        <TextView
                android:id="@+id/tvPrice"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

        <CheckBox
                android:id="@+id/cbStatus"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchased"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/btnEdit"
                android:text="@string/btn_edit_txt"
                android:textSize="14sp"
                android:layout_width="80dp"
                android:layout_height="45dp"/>
        <Button
                android:id="@+id/btnDelete"
                android:text="@string/btn_delete_txt"
                android:textSize="14sp"
                android:layout_width="80dp"
                android:layout_height="45dp"/>

    </LinearLayout>
</LinearLayout>