<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/lightLime"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/txtSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="80dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/amount_spent_txt"/>

    <TextView
            android:id="@+id/txtToSpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/amount_to_spend_txt"/>

    <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:paddingBottom="80dp"
            android:text="@string/total_amount_txt"/>

    <org.eazegraph.lib.charts.PieChart
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/piechart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:egLegendTextSize="18sp"
            app:egUsePieRotation="true"
            app:egValueTextSize="36sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:paddingBottom="20dp"
            android:text="@string/piechart_caption"/>

</LinearLayout>